feat: added update secret
