# internal/secrets/models.go
@@ -15,6 +15,14 @@ type Secret struct {
 	UpdatedAt time.Time `json:"updated_at" db:"updated_at" jsonapi:"attr,updated_at,iso8601" example:"2023-11-20T11:15:37Z"`
 }
 
+type SecretReq struct {
+	Title    string `json:"title" jsonapi:"attr,title" validate:"required" example:"адрес базы данных"`
+	Key      string `json:"key" jsonapi:"attr,key" validate:"required" example:"dbHost"`
+	Data     string `json:"data" jsonapi:"attr,data" validate:"required" example:"localhost:5432"`
+	Type     string `json:"type" jsonapi:"attr,type" validate:"oneof= auth ssh env" example:"env"`
+	AuthorId int    `json:"author_id" db:"author_id" jsonapi:"attr,author_id" validate:"required"  example:"1"`
+}
+
 type UsersSecret struct {
 	UserIds  []int `json:"user_ids" db:"user_id" example:"13"`
 	SecretId int   `json:"secret_id" db:"secret_id" example:"41"`
