# pkg/config/routes.go
@@ -57,6 +57,7 @@ func (app *Config) LoadRoutes() {
 
 	api.HandleFunc("/secrets", secretRepo.All).Methods("GET")
 	api.HandleFunc("/secrets/{secret_id}", secretRepo.One).Methods("GET")
+	api.HandleFunc("/secrets/{secret_id}", secretRepo.Update).Methods("PUT")
 
 	api.HandleFunc("/secrets", secretRepo.Create).Methods("POST")
 	api.HandleFunc("/secrets/share", secretRepo.ShareSecret).Methods("POST")
